fabric/support/test/tests/noble_ui/duplicate_store_attr.stderr
error: Invalid noble::noble, multiple argument noble::generate_store found
  --> $DIR/duplicate_store_attr.rs:12:33
   |
12 |     #[noble::generate_store(trait Store)]
   |                                    ^^^^^
